[package]
name = "cart"
version = "0.1.0"
edition = "2021"

[lib]
# staticlib: produce a .a suitable for linking with riscv64-linux-gnu-gcc.
crate-type = ["staticlib"]

[dependencies]
blyt32 = { path = "../sdk/blyt32" }

[profile.release]
opt-level = 2
lto = false
panic = "abort"

[features]
default = []
# stage1: minimal stub cart (no SDK calls, just sentinel byte + loader smoke)
stage1 = []
# stage2: raw extern "C" float ABI test (no SDK wrapper)
stage2 = []
